--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=backend
+spring.datasource.url=jdbc:mysql://localhost:3306/bandurrialingo
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret=cuatrofantasticos
+jwt.expiration=86400000
