--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.7",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
